--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,8 @@
 ---
-- name: Run apps command - {{appname}} {{action}} {{packager}}
+- name: Run apps command - {{appname}} {{action}}
   ansible.builtin.shell: |
     source ~/.dotfiles/source.sh
-    apps {{ appname }} {{ action }} {{ packager }}
+    apps {{ appname }} {{ action }}
   args:
     executable: /bin/zsh
     chdir: "{{ ansible_env.HOME }}"
