--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,14 +1,14 @@
 ---
-- name: Run apps command - {{apps_name}} {{apps_action}}
+- name: Run app command - {{app_name}} {{app_action}}
   ansible.builtin.shell: |
     source ~/.dotfiles/source.sh
-    apps {{ apps_name }} {{ apps_action }}
+    app {{ app_name }} {{ app_action }}
   args:
     executable: /bin/zsh
     chdir: "{{ ansible_env.HOME }}"
-  register: apps_result
+  register: app_result
   changed_when: false
 
-- name: Show apps command output
+- name: Show app command output
   ansible.builtin.debug:
-    var: apps_result.stdout
+    var: app_result.stdout
