--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,3 +1,3 @@
 ---
-apps_name: "{{ name | default(appname) }}"
-apps_action: "{{ action | default(command, true) | default('install') }}"
+app_name: "{{ name | default(appname) }}"
+app_action: "{{ action | default(command, true) | default('install') }}"
